fix image alignement

--- a/web/styl/lol_items.styl
+++ b/web/styl/lol_items.styl
@@ -151,15 +151,15 @@ $item_right_pos = 310px
   img
     left 260px
     position absolute
-    top -44px
+    top -48px
 
   .item-priority
     itemPriority()
     left $item_right_pos
-    top -46px
+    top -50px
 
   .item-name
     left $item_right_pos
     position absolute
-    top -48px
+    top -52px
     width $item_width
